Fixed quote description spacing.
Quote descriptions were not lining up cleanly regarding titles that were too long. Fixed it.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,6 +80,8 @@ div.desc>cite {
 
 div.desc>p {
     color: var(--text-green);
+    min-width: max-content;
+    margin-left: 1rem;
 }
 
 label {
